fix bug and add validate example
