# docs/openapi.yaml
@@ -3,16 +3,16 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
+    title: GreeterService API
     description: The greeting service definition.
     version: 0.0.1
 paths:
     /helloworld/{name}:
         get:
             tags:
-                - Greeter
+                - GreeterService
             description: Sends a greeting
-            operationId: Greeter_SayHello
+            operationId: GreeterService_SayHello
             parameters:
                 - name: name
                   in: path
@@ -25,7 +25,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/HelloReply'
+                                $ref: '#/components/schemas/SayHelloResponse'
                 default:
                     description: Default error response
                     content:
@@ -42,7 +42,7 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        HelloReply:
+        SayHelloResponse:
             type: object
             properties:
                 message:
@@ -65,4 +65,4 @@ components:
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
-    - name: Greeter
+    - name: GreeterService
